[tool.poetry]
name = "caeser"
version = "0.1.0"
description = ""
authors = ["RaneemAbdulazez <raneem97su@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"
nltk = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
